--- a/K_league_info/app/src/main/AndroidManifest.xml
+++ b/K_league_info/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity android:name=".ui.community.postScreen" />
         <activity android:name=".teamdetailActivity" />
+        <activity android:name=".Player"/>
     </application>
 
 </manifest>
