--- a/K_league_info/app/src/main/AndroidManifest.xml
+++ b/K_league_info/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ScoredetailActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -19,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.community.postScreen" />
-        <activity android:name=".Player"/>
+        <activity android:name=".Player" />
         <activity android:name=".TeamdetailActivity" />
     </application>
 
