--- a/K_league_info/app/src/main/AndroidManifest.xml
+++ b/K_league_info/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".ui.community.PostWrite"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".Player" />
+        <activity android:name=".PlayerActivity" />
         <activity android:name=".TeamdetailActivity" />
     </application>
 
