--- a/K_league_info/app/build.gradle
+++ b/K_league_info/app/build.gradle
@@ -57,4 +57,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+
+    // 이미지를 url로 받아와서 처리하기위해 추가
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 }
