--- a/K_league_info/app/src/main/AndroidManifest.xml
+++ b/K_league_info/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.k_league_info">
-    
+
     <permission android:name="android.permission.INTERNET" />
 
     <application
@@ -17,16 +17,15 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.community.PostScreen"
-            android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".ui.community.PostWrite"
-            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".ui.community.PostScreen" android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".ui.community.PostWrite" android:windowSoftInputMode="adjustResize" />
         <activity android:name=".PlayerActivity" />
-        <activity android:name=".TeamdetailActivity" />
+        <activity android:name=".TeamdetailActivity"/>
     </application>
 
 </manifest>
