--- a/K_league_info/app/build.gradle
+++ b/K_league_info/app/build.gradle
@@ -49,7 +49,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
 
     //noinspection GradleCompatible,GradleCompatible
     implementation 'com.android.support:design:28.0.0'
