--- a/K_league_info/local.properties
+++ b/K_league_info/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Sep 13 17:30:56 KST 2020
-sdk.dir=C\:\\Users\\zzoye\\AppData\\Local\\Android\\Sdk
+#Wed Sep 30 17:26:48 KST 2020
+sdk.dir=C\:\\Users\\bvon9\\AppData\\Local\\Android\\Sdk
