--- a/K_league_info/local.properties
+++ b/K_league_info/local.properties
@@ -4,10 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Sun Sep 27 21:18:16 KST 2020
+#Sun Oct 11 21:46:58 KST 2020
+>>>>>>>=upstream/develop
 sdk.dir=C\:\\Android_SDK
-=======
-#Wed Sep 30 17:26:48 KST 2020
-sdk.dir=C\:\\Users\\bvon9\\AppData\\Local\\Android\\Sdk
->>>>>>> upstream/develop
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
