--- a/K_league_info/app/src/main/AndroidManifest.xml
+++ b/K_league_info/app/src/main/AndroidManifest.xml
@@ -22,9 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity
-            android:name=".ui.community.PostWrite"
-            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".ui.community.PostWrite" />
         <activity android:name=".ScoredetailActivity"></activity>
         <activity android:name=".PlayerActivity" />
         <activity android:name=".TeamdetailActivity" />
