--- a/K_league_info/local.properties
+++ b/K_league_info/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 19 21:32:19 KST 2020
-sdk.dir=C\:\\Users\\bvon9\\AppData\\Local\\Android\\Sdk
+#Mon Oct 19 21:44:26 KST 2020
+sdk.dir=C\:\\Users\\YuKH\\AppData\\Local\\Android\\Sdk
