--- a/K_league_info/local.properties
+++ b/K_league_info/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 20 19:52:24 KST 2020
+#Fri Oct 23 16:44:51 KST 2020
 >>>>>>>=upstream/develop
-sdk.dir=C\:\\Android_SDK
-=\=\=\=\=\=\=
+sdk.dir=C\:\\Users\\Metanet\\AppData\\Local\\Android\\Sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
