--- a/K_league_info/local.properties
+++ b/K_league_info/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 23 16:44:51 KST 2020
+#Sun Oct 25 23:00:07 KST 2020
 >>>>>>>=upstream/develop
-sdk.dir=C\:\\Users\\Metanet\\AppData\\Local\\Android\\Sdk
-<<<<<<<=HEAD
+sdk.dir=C\:\\Android_SDK
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
